kube_configs/db_migrate.yml
apiVersion: v1
kind: Pod
metadata:
  name: db-migrate
  labels:
    name: db-migrate
    type: command-runner
    app: website
    environment: production
spec:
  activeDeadlineSeconds: 300
  restartPolicy: Never
  containers:
  - name: command-runner
    image: jules2689/website:v1.01
    command: ["bundle", "exec", "rake", "db:migrate"]
    volumeMounts:
      - name: ejson-keys
        mountPath: /key
        readOnly: true
    volumeMounts:
      - name: ejson-keys
        mountPath: "/opt/ejson/keys"
        readOnly: true
  volumes:
  - name: ejson-keys
    secret:
      secretName: ejson-keys
