kube_configs/nginx_ingress.yml
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx-ingress-rc
  namespace: kube-system
  labels:
    app: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
        name: nginx-ingress
    spec:
      hostNetwork: true
      containers:
      - image: nginxdemos/nginx-ingress:0.7.0
        imagePullPolicy: Always
        name: nginx-ingress
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
