kube_configs/collab.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: collab
  namespace: collab
  labels:
    name: collab
    app: collab
    environment: production
spec:
  rules:
  - host: collab.jnadeau.ca
    http:
      paths:
      - backend:
          serviceName: collab
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: collab
  namespace: collab
  labels:
    name: collab
    app: collab
    environment: production
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    name: collab
    app: collab
    environment: production
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: collab
  namespace: collab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: collab
        app: collab
        environment: production
    spec:
      containers:
      - name: collab
        image: jules2689/collab:v1.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http
